cleaned up some stuff. the challenges & issues part is messy & incomplete :eyes:

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -10,8 +10,6 @@
     "# Table of contents\n",
     "1. [Introduction](#introduction)\n",
     "2. [Decomposition and breakdown](#decomposition)\n",
-    "    1. [Pseudocode](#pseudocode)\n",
-    "    2. [Flowchart](#flowchart)\n",
     "3. [Extraction & Analysis of Data Given](#analysisandextracting)\n",
     "    1. [Extracting Data from CSV](#extracting)\n",
     "    2. [Analysis of Data Given](#analysis)\n",
@@ -67,17 +65,9 @@
    "id": "f913582f-57d0-4429-97b0-1175616945b9",
    "metadata": {},
    "source": [
-    "## 2.2) Flowchart <a id=\"flowchart\"></a>\n",
+    "## Flowchart\n",
     "\n",
     "![flowchart](assets/Flowchart2.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "443993c1-abd9-4fce-8982-ef78362591f2",
-   "metadata": {},
-   "source": [
-    "##2.3) "
    ]
   },
   {
@@ -871,6 +861,9 @@
    "execution_count": null,
    "id": "39ef2bf3-0c76-443a-8194-b779815ae4e2",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -1277,7 +1270,7 @@
    "id": "535dea59-6582-4a07-8968-2636101a2978",
    "metadata": {},
    "source": [
-    "### 7.1.1 CGPA case <a id='sevenoneone'></a>\n",
+    "### 7.1.1) CGPA case <a id='sevenoneone'></a>\n",
     "But this does not work for CGPA, for that we want to find the mean, range, and midrange instead.\n",
     "If we only took one of these factors, there would be false positives, so by caring about all of them, it would remove such cases. There will be a higher difficulty in contextualising what the end result is at a glance, but that is solved later.\n",
     "\n",
@@ -1476,7 +1469,7 @@
    "id": "16225eae-6d74-4f94-b072-0f2063ba8f3d",
    "metadata": {},
    "source": [
-    "## 7.2 Calculating the factors for each group <a id='seventwo'></a>\n",
+    "## 7.2) Calculating the factors for each group <a id='seventwo'></a>\n",
     "Combine all the previous functions together to obtain the data for the least diverse of each factor and which group(s) they belong to\n",
     "\n",
     "For each factor, iterate through the groups to calculate their diversity and store the least diverse\n",
@@ -1686,7 +1679,7 @@
    "id": "f05a1390-24f4-477c-b40b-befbedb5bc5a",
    "metadata": {},
    "source": [
-    "### 7.4.1 Finding Theoretical best school distribution when disregarding other factors <a id='sevenfourone'></a>\n",
+    "### 7.4.1) Finding Theoretical best school distribution when disregarding other factors <a id='sevenfourone'></a>\n",
     "\n",
     "Could reuse the FindLeastDiverseInTutorialGroup() with sortSchool(), but it is inefficient, and sortSchool has to work with the rest of the sorting algorithms, so it is not the most optimal possible\n",
     "\n",
@@ -2141,7 +2134,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2155,7 +2148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
