changed graph plot thing to grp 5

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -1025,8 +1025,8 @@
    },
    "outputs": [],
    "source": [
-    "TutGNum = 4\n",
-    "graph_type = 'box'  #'pie' - pie chart 'bar' - Bar graph 'box' - box&whisker\n",
+    "TutGNum = 5\n",
+    "graph_type = 'bar'  #'pie' - pie chart 'bar' - Bar graph 'box' - box&whisker\n",
     "\n",
     "\n",
     "def GetgrpsGraphs(TutGNum, graph_type):\n",
