More comments and descriptions

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -1172,19 +1172,20 @@
     "2. Gender\n",
     "3. Current CGPA\n",
     "\n",
-    "General flow:\n",
+    "#### General flow:\n",
     "- For each tutorial group, check for a single factor first, to find the group with the least diversity\n",
     "- Then compare them to find the group with the least diversity in the tutorial group\n",
     "- Repeat for all tutorial groups\n",
     "- Finally, for each factor, compare the least diverse group of every tutorial group to find least diverse overall\n",
     "\n",
-    "Considerations:\n",
+    "#### Considerations:\n",
     "- Diversity assessment of group should account for the diversity of the tutorial group it is in\n",
     "- Using averages could result in a good score when there are similar amounts of good groups and bad groups\n",
     "    - Hence we chose to evaluate using the worst\n",
     "    - Histogram shows the distribution of groups for other case\n",
+    "- Sorting does not feel necessary, as a histogram would show a form of sorting and is a lot more digestible\n",
     "\n",
-    "Flowchart\n",
+    "#### Flowchart:\n",
     "![Flowchart](assets/flowchart.png)"
    ]
   },
@@ -1759,7 +1760,9 @@
     "\n",
     "Could reuse the FindLeastDiverseInTutorialGroup() with sortSchool(), but it is inefficient, and sortSchool has to work with the rest of the sorting algorithms, so it is not the most optimal possible\n",
     "\n",
-    "Instead, math will be used, the base case is the most diverse is distributing the highest school count(highestSchCnt) evenly. Then the group with the most amount of this school is found by `ceil(highestSchCnt / grpNum)`"
+    "Instead, math will be used, the base case is the most diverse is distributing the highest school count(highestSchCnt) evenly. Then the group with the most amount of students from this school is found by `ceil(highestSchCnt / grpNum)`\n",
+    "\n",
+    "Then, groups with extra students have to be taken into account, as when `highestSchCnt % grpNum` is higher than number of extra students, there will be groups with extra students and groups without extra students both sharing simiilar highest number of students with the same school. While when it is not higher, we have to compare highest occurence in group with extra and highest-1 occurence in group without extra."
    ]
   },
   {
@@ -1833,10 +1836,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a6c26613-f880-4739-938f-c1544fb8f5fa",
+   "metadata": {},
+   "source": [
+    "There is a case where reusing `sortSchool()` is not the optimal outcome due to `sortSchool()` needing to work with other factors as well. The case is when there is more than 1 most common school. But it is not shown when for n=5."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "17996874-1285-4462-bf99-bfda0e15465e",
    "metadata": {},
    "source": [
-    "### 7.4.2) Calculating gender ratio of every TG group for comparison later <a id='sevenfourtwo'></a>"
+    "### 7.4.2) Calculating gender ratio of every TG group <a id='sevenfourtwo'></a>\n",
+    "Simple iteration and calculating of `totalMale / number_of_students` "
    ]
   },
   {
@@ -1859,7 +1871,9 @@
    "id": "cf2317bb-8cab-4a61-96b8-1241b990fed4",
    "metadata": {},
    "source": [
-    "## 7.5) Combining everything to print the least diverse of every tutorial group and additionally least diverse overall with respect to difference from tutorial group <a id='sevenfive'></a>"
+    "## 7.5) Combining everything to print the least diverse of every tutorial group and additionally least diverse overall with respect to difference from tutorial group <a id='sevenfive'></a>\n",
+    "\n",
+    "Iterate through everything and find the lowest"
    ]
   },
   {
@@ -1951,6 +1965,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aa97dac3-3e6d-4529-bf43-458995883542",
+   "metadata": {},
+   "source": [
+    "### Reusing functions to check the groups with lowest diversity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b4cc1b48-a68b-47aa-837c-e3d8c4efa3ef",
@@ -1959,13 +1981,23 @@
    },
    "outputs": [],
    "source": [
-    "tgs = [72, 75, 85]\n",
+    "tgs = [1, 67, 59]\n",
     "for i in tgs:\n",
     "    tg = i-1\n",
     "    print(f\"Tutorial group: {tg+1}:\")\n",
     "    PrintResultForTutorialGroup(finalAllTgs[tg])\n",
     "    # PrintFactorNice((allTG_LD[tg], allTG_LD_Idx[tg]))\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be74740c-6383-45e0-be17-ad5db2fe22fd",
+   "metadata": {},
+   "source": [
+    "The 100% male group happens when accounting for other more important factors\n",
+    "\n",
+    "The following is without accounting for other factors:"
    ]
   },
   {
@@ -1977,7 +2009,7 @@
    },
    "outputs": [],
    "source": [
-    "tg = 75\n",
+    "tg = 67\n",
     "testytest = []\n",
     "for grp in finalAllTgs[tg]:\n",
     "    testytest.extend(grp)\n",
@@ -2173,7 +2205,9 @@
    "id": "4be7c74b-5f79-4f25-b783-43d19a451206",
    "metadata": {},
    "source": [
-    "- Jupyter notebook with git results in tons of merge conflicts stemming from it being a giant JSon, especially with execution_count, output, and when moving around cells. Outputs are also so large that they make it hard to find merge conflicts that matter.\n",
+    "Eugene\n",
+    "- Jupyter notebook with git results in tons of merge conflicts because of it being a giant JSon, especially with execution_count, output, and when moving around cells. Outputs are also so large that they make it hard to find merge conflicts that matter. Eventually we worked around part of it by pushing only after removing the output.\n",
+    "\n",
     "- Data types get complicated with the lists in lists in dictionaries, what does `leastDiverse[0][\"School\"][1]` mean for example, not intuitive at a glance\n",
     "- Finding an objective way to show that it is the most diverse (Pareto fronts, but too difficult to implement)"
    ]
