Update decomposition and conclusion

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -65,6 +65,22 @@
    "id": "f913582f-57d0-4429-97b0-1175616945b9",
    "metadata": {},
    "source": [
+    "## Decomposition process\n",
+    "\n",
+    "We decided to decompose the problem into subproblems that can be done individually without needing much input from the rest of the problem, as this allows for easy splitting of tasks.\n",
+    "We identified the following subproblems that fit into this criteria:\n",
+    "- Extraction and creation of CSV\n",
+    "- Analysis of data and graphs\n",
+    "- Sorting algorithm\n",
+    "- Algorithm evaluation algorithm\n",
+    "\n",
+    "Within each of the subproblems, we then broke the problem down even more by ourselves, getting input from those doing other groups if need be.\n",
+    "<br>\n",
+    "For example, the algorithm evaluation and sorting algorithm have a common point in choosing factors to prioritise and defining diversity. While this can be done independantly, it made more sense to discuss and solve it together once than to do it twice individually with different answers. Tackling the issue from each of our own perspectives focused on our own problems also brought up more perspectives.\n",
+    "<br>\n",
+    "The data structure for the data of students was also a common point between all subproblems, so we discussed that as well and settled on a compromise of having it be effective across all subproblems instead of overwhelmingly in favour of only one.\n",
+    "\n",
+    "\n",
     "## Flowchart\n",
     "\n",
     "![flowchart](assets/Flowchart2.png)"
@@ -343,7 +359,7 @@
    "outputs": [],
    "source": [
     "def Box_whisker(CGPA, labels = None):\n",
-    "    print(CGPA)\n",
+    "    # print(CGPA)\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    plt.boxplot(CGPA,tick_labels=labels, patch_artist=True)\n",
     "    plt.title(\"Boxplot of CGPA\", fontsize=20)"
@@ -1713,7 +1729,6 @@
     "\n",
     "    # For analysis later\n",
     "    secondHighestSchCnt = orderSchool(tg_studentData)[0][1][1]\n",
-    "    print(\"h\", highestSchCnt, secondHighestSchCnt)\n",
     "    # print(orderSchool(tg_studentData)[0][0][1])\n",
     "\n",
     "    # Calculate number of groups in TG\n",
@@ -1729,7 +1744,7 @@
     "    remainder = highestSchCnt % numGrp\n",
     "    data = maxRepeat / n \n",
     "    # But we need to account for groups with extra members\n",
-    "    print(maxRepeat, n, remainder, r)\n",
+    "    # print(maxRepeat, n, remainder, r)\n",
     "    if r > 0 and r <= total/(2 * n): # Don't care for case 2 of group nums\n",
     "        data2 = maxRepeat / (n + 1)\n",
     "        if remainder > r or remainder == 0:\n",
@@ -1746,13 +1761,13 @@
     "    # Check if it is correct by comparing it with the bruteforce method\n",
     "    byBruteforce = FindLeastDiverseInTutorialGroup([\"School\"], sortSchool(tgStuds, n))[0][\"School\"][1]\n",
     "    byMath = TheoreticalBestForSchool_LD(tgStuds)\n",
-    "    if byBruteforce != byMath:\n",
-    "        sortSch = sortSchool(tgStuds, n)\n",
-    "        for i in sortSch:\n",
-    "            PrintDictListNice(i)\n",
-    "            print()\n",
-    "        print(f\"{byBruteforce} vs {byMath}\", end=\"\\n\\n\")\n",
-    "        hasDiscrepency = True\n",
+    "    # if byBruteforce != byMath:\n",
+    "        # sortSch = sortSchool(tgStuds, n)\n",
+    "        # for i in sortSch:\n",
+    "        #     PrintDictListNice(i)\n",
+    "        #     print()\n",
+    "    print(f\"{byBruteforce} vs {byMath}\", end=\"\\n\\n\")\n",
+    "    hasDiscrepency = True\n",
     "        \n",
     "    TBestSchLD.append(byMath)\n",
     "print(hasDiscrepency)"
@@ -2141,7 +2156,9 @@
    "id": "683b2fee-bc9c-416a-8148-c5ee91547f34",
    "metadata": {},
    "source": [
-    "# 10) Conclusion <a id='conc'></a>"
+    "# 10) Conclusion <a id='conc'></a>\n",
+    "\n",
+    "Although we cannot prove that it is the most diverse, we managed to produce a result we deem diverse enough given the circumstances of having to balance multiple factors with varying importance to education."
    ]
   },
   {
