added pseudocode, other minor changes

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -10,19 +10,21 @@
     "# Table of contents\n",
     "1. [Introduction](#introduction)\n",
     "2. [Decomposition and breakdown](#decomposition)\n",
-    "3. [Extraction & Analysis of Data Given](#analysisandextracting)\n",
+    "    1. [Flowchart](#flowchart)\n",
+    "    2. [Pseudocode](#pseudo)\n",
+    "4. [Extraction & Analysis of Data Given](#analysisandextracting)\n",
     "    1. [Extracting Data from CSV](#extracting)\n",
     "    2. [Analysis of Data Given](#analysis)\n",
-    "4. [Design of Algorithm](#design)\n",
+    "5. [Design of Algorithm](#design)\n",
     "    1. [Sorting Priorities](#priorities)\n",
     "    2. [Group Sizes](#sizes)\n",
     "    3. [Brainstorming: Individual Modular Diversification of Factors](#modular)\n",
     "        1. [Considering School Frequency: Diversifying School](#school)\n",
     "        2. [Buckets & Cyclic Round-Robin: Diversifying CGPA](#cgpa)\n",
     "        3. [Diversifying Gender](#gender)\n",
-    "5. [Sorting Algorithm](#algo)\n",
-    "6. [Converting Back & Post-Analysis](#post)\n",
-    "7. [Algorithm Evaluation: Diversity Index](#seven)\n",
+    "6. [Sorting Algorithm](#algo)\n",
+    "7. [Converting Back & Post-Analysis](#post)\n",
+    "8. [Algorithm Evaluation: Diversity Index](#seven)\n",
     "    1. [Finding the diversity of a single factor of a single group](#sevenone)\n",
     "        1. [CGPA case](#sevenoneone)\n",
     "    2. [Calculating the factors for each group](#seventwo)\n",
@@ -31,10 +33,10 @@
     "        1. [Finding Theoretical best school distribution when disregarding other factors](#sevenfourone)\n",
     "        2. [Calculating gender ratio of every TG group for comparison later](#sevenfourtwo)\n",
     "    5. [Combining everything for the final result](#sevenfive)\n",
-    "8. [Graphical Plots](#plots)\n",
+    "9. [Graphical Plots](#plots)\n",
     "    1. [Interpretation of Plots](#interp)\n",
-    "9. [Challenges & Issues](#challenges)\n",
-    "10. [Conclusion](#conc)"
+    "10. [Challenges & Issues](#challenges)\n",
+    "11. [Conclusion](#conc)"
    ]
   },
   {
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f913582f-57d0-4429-97b0-1175616945b9",
+   "id": "daae3258-ceeb-4f78-9caf-683f72078489",
    "metadata": {},
    "source": [
     "## Decomposition process\n",
@@ -78,12 +80,75 @@
     "<br>\n",
     "For example, the algorithm evaluation and sorting algorithm have a common point in choosing factors to prioritise and defining diversity. While this can be done independantly, it made more sense to discuss and solve it together once than to do it twice individually with different answers. Tackling the issue from each of our own perspectives focused on our own problems also brought up more perspectives.\n",
     "<br>\n",
-    "The data structure for the data of students was also a common point between all subproblems, so we discussed that as well and settled on a compromise of having it be effective across all subproblems instead of overwhelmingly in favour of only one.\n",
-    "\n",
-    "\n",
-    "## Flowchart\n",
+    "The data structure for the data of students was also a common point between all subproblems, so we discussed that as well and settled on a compromise of having it be effective across all subproblems instead of overwhelmingly in favour of only one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f913582f-57d0-4429-97b0-1175616945b9",
+   "metadata": {},
+   "source": [
+    "## 2.1) Flowchart <a id=\"flowchart\"></a>\n",
     "\n",
     "![flowchart](assets/Flowchart2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e44e073-945e-434f-b519-8dbab04e9a6b",
+   "metadata": {},
+   "source": [
+    "## 2.2) Psuedocode <a id=\"pseudo\"></a>\n",
+    "\n",
+    "START      \n",
+    "\n",
+    "LOAD student dataset from CSV file      \n",
+    "\n",
+    "GET each line into a list       \n",
+    "\n",
+    "FOR each line in List        \n",
+    " SPLIT each line separated by ',' and put into a list         \n",
+    "REMOVE first index in the list      \n",
+    "\n",
+    "FORMAT List into a List containing a dictionary of the data of each student       \n",
+    "\n",
+    "GET Gender, School and CGPA and store it into a list        \n",
+    "\n",
+    "FORMAT the Lists for plotting        \n",
+    "\n",
+    "PLOT School, Gender and CGPA of whole school        \n",
+    "\n",
+    "PLOT School, Gender and CGPA of Tutorial group        \n",
+    "\n",
+    "LOOP through studentdata and get count of school       \n",
+    "SORT list of schools in descending order         \n",
+    "DISTRIBUTE school in round robin order         \n",
+    "\n",
+    "SORT CGPA into descending order and partition them into buckets         \n",
+    "DISTRIBUTE cyclically across each group using round robin            \n",
+    "\n",
+    "SORT data into students of equal groups factoring in Gender         \n",
+    "\n",
+    "FIND number of females and males in the tutorial group           \n",
+    "DISTRIBUT the females and males           \n",
+    "ASSIGN group while maintaining gender ratios            \n",
+    "\n",
+    "\n",
+    "COMBINE sort function based on priority            \n",
+    "\n",
+    "\n",
+    "PLOT School, Gender and CGPA of groups compared with Tutorial group       \n",
+    "\n",
+    "CREATE function to calculate Mean, range, midrange and median for CGPA          \n",
+    "FIND the Mean, range, midrange and median of group and the respective tutorial group         \n",
+    "GET gpa values in a group and count how many are below or above the mean          \n",
+    "GET diversity score where higher is more balanced and lower is           \n",
+    "FIND groups with the lowest CGPA diversity score           \n",
+    "\n",
+    "FIND the theoretical best worst case if we were to distribute school only and gender only             \n",
+    "COMPARE theoretical value vs what actual algorithm produces            \n",
+    "\n",
+    "PLOT diversity index of least diverse group's School, Gender and CGPA"
    ]
   },
   {
@@ -107,15 +172,11 @@
    "id": "ba100164-9980-4669-a0b5-57cc27996dbf",
    "metadata": {},
    "source": [
-    "file = original excel file\n",
-    "\n",
-    "rawFileData = giant list where each item is a row converted into a single string\n",
-    "\n",
-    "fileHeader = first row ['Tutorial Group','Student ID','School','Name','Gender','CGPA']\n",
-    "\n",
-    "fileData = each row in the file turned into a list of cells as strings\n",
-    "\n",
-    "studentData = list of dictionaries, each representing a student's data ('student ID', 'TG', 'School', 'Name', 'Gender', 'CGPA')\n"
+    "- file = original excel file\n",
+    "- rawFileData = giant list where each item is a row converted into a single string\n",
+    "- fileHeader = first row ['Tutorial Group','Student ID','School','Name','Gender','CGPA']\n",
+    "- fileData = each row in the file turned into a list of cells as strings\n",
+    "- studentData = list of dictionaries, each representing a student's data ('student ID', 'TG', 'School', 'Name', 'Gender', 'CGPA')"
    ]
   },
   {
@@ -1042,7 +1103,7 @@
    "outputs": [],
    "source": [
     "TutGNum = 5\n",
-    "graph_type = 'bar'  #'pie' - pie chart 'bar' - Bar graph 'box' - box&whisker\n",
+    "graph_type = 'pie'  #'pie' - pie chart 'bar' - Bar graph 'box' - box&whisker\n",
     "\n",
     "\n",
     "def GetgrpsGraphs(TutGNum, graph_type):\n",
@@ -1464,7 +1525,7 @@
    "source": [
     "# Testing the code above to check it works\n",
     "\n",
-    "testGroupData = finalAllTgs[0] # Easy to change if this variable used from another section changes\n",
+    "testGroupData = finalAllTgs[5] # Easy to change if this variable used from another section changes\n",
     "\n",
     "# Calculate median and range of tutorial group\n",
     "medianCGPA = Median(TutGrpExtractCGPA(testGroupData))\n",
@@ -1618,7 +1679,7 @@
     "    return output\n",
     "\n",
     "# Test\n",
-    "PrintResultForTutorialGroup(finalAllTgs[0])"
+    "PrintResultForTutorialGroup(finalAllTgs[4])"
    ]
   },
   {
@@ -2114,39 +2175,10 @@
    "id": "1c8b5003",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
     "- Problems with showing two different types of data in one graph for comparision for data analysis\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f3bb6498-05d6-4611-84ae-86e07adaa79b",
-   "metadata": {},
-   "source": [
-    "- Difficult to find an optimal way to format the student data\n",
-    "- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c5381754-fa7a-4f27-b0f5-194db32c8876",
-   "metadata": {},
-   "source": [
-    "Cherry\n",
     "- Wrapping my head around how to implement a process (especially the CGPA bucket round robin) into code\n",
-    "- Combining the three modularised distribution algorithms in a workable way while respecting set priorities and not sacrificing too much diversity on the individual components"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4be7c74b-5f79-4f25-b783-43d19a451206",
-   "metadata": {},
-   "source": [
-    "Eugene\n",
+    "- Combining the three modularised distribution algorithms in a workable way while respecting set priorities and not sacrificing too much diversity on the individual components\n",
     "- Jupyter notebook with git results in tons of merge conflicts because of it being a giant JSon, especially with execution_count, output, and when moving around cells. Outputs are also so large that they make it hard to find merge conflicts that matter. Eventually we worked around part of it by pushing only after removing the output.\n",
-    "\n",
     "- Data types get complicated with the lists in lists in dictionaries, what does `leastDiverse[0][\"School\"][1]` mean for example, not intuitive at a glance\n",
     "- Finding an objective way to show that it is the most diverse (Pareto fronts, but too difficult to implement)"
    ]
@@ -2158,7 +2190,7 @@
    "source": [
     "# 10) Conclusion <a id='conc'></a>\n",
     "\n",
-    "Although we cannot prove that it is the most diverse, we managed to produce a result we deem diverse enough given the circumstances of having to balance multiple factors with varying importance to education."
+    "Although we cannot prove that it is the most diverse group allocation possible, we managed to produce a result we deem diverse enough given the circumstances of having to balance multiple factors with varying importance to education."
    ]
   },
   {
