added main algo pseudocode by daniel

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -100,6 +100,7 @@
    "source": [
     "## 2.2) Psuedocode <a id=\"pseudo\"></a>\n",
     "\n",
+    "```text\n",
     "START      \n",
     "\n",
     "LOAD student dataset from CSV file      \n",
@@ -907,6 +908,100 @@
     "        grpIndex += 1\n",
     "    \n",
     "    return grps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3608223c-1d56-49ac-8ea8-c12071202a12",
+   "metadata": {},
+   "source": [
+    "## Pseudocode for Algorithm\n",
+    "\n",
+    "```text\n",
+    "n = 5\n",
+    "finalGrps\n",
+    "FOR each tutorial group in total data\n",
+    "    studentData = data of all students in the tutorial group\n",
+    "    total = number of students in the tutoral group\n",
+    "    r = total % n\n",
+    "    numGrp = 0\n",
+    "    grpSizes = []\n",
+    "    IF r <= total/(2*n)\n",
+    "        numGr = total//n\n",
+    "        i = 0\n",
+    "        WHILE i < numGrp - 1\n",
+    "            IF i < r\n",
+    "                APPEND [n + 1] to grpSizes\n",
+    "            ELSE\n",
+    "                APPEND [n] to grpSizes\n",
+    "            ENDIF\n",
+    "            i = i + 1\n",
+    "        ENDWHILE\n",
+    "    ELSE\n",
+    "        numGr = total//n + 1\n",
+    "        i = 0\n",
+    "        WHILE i < numGrp - 1\n",
+    "            IF i < r\n",
+    "                APPEND [r] to grpSizes\n",
+    "            ELSE\n",
+    "                APPEND [n] to grpSizes\n",
+    "            ENDIF\n",
+    "            i = i + 1\n",
+    "        ENDWHILE\n",
+    "    ENDIF\n",
+    "    \n",
+    "    grps = list of numGrp lists\n",
+    "\n",
+    "    FIND number of students from each school\n",
+    "    sortedStudents = studentData sorted in order of students from most populated school to least populated\n",
+    "    FIND total males in studentData\n",
+    "    FIND minimum number of males per group\n",
+    "    FIND remaining males\n",
+    "    mIdeal = list of numGrp lists\n",
+    "    ADD 1 remaining male to each group until all have been distributed\n",
+    "    mCurr = list of numGrp sub lists that each contain the number 0\n",
+    "    \n",
+    "    FIND total females in studentData\n",
+    "    FIND minimum number of females per group\n",
+    "    FIND remaining females\n",
+    "    fIdeal = list of numGrp lists\n",
+    "    ADD 1 remaining female to each group until all have been distributed\n",
+    "    fCurr = list of numGrp sub lists that each contain the number 0\n",
+    "\n",
+    "    i = 0\n",
+    "    WHILE i < total - 1\n",
+    "        offset = 0\n",
+    "        student = ith student in sortedStudents\n",
+    "        WHILE offset < numGrp - 1\n",
+    "            g = (i + offset) % numGrp\n",
+    "            IF length of grps[g] < grpSizes[g]\n",
+    "                IF student is male and mCurr[g] < mIdeal[g]\n",
+    "                    APPEND the student to grps[g]\n",
+    "                    mCurr[g] = mCurr[g] + 1\n",
+    "                    BREAK\n",
+    "                ELSE IF student is female and fCurr[g] < fIdeal[g]\n",
+    "                    APPEND the stuent to grps[g]\n",
+    "                    fCurr[g] = fCurr[g] + 1\n",
+    "                    BREAK\n",
+    "                ELSE\n",
+    "                    offset = offset + 1\n",
+    "                ENDIF\n",
+    "            ELSE\n",
+    "                FIND smallest group in grps\n",
+    "                g = index of smallest group\n",
+    "                IF student is male\n",
+    "                    APPEND student to grps[g]\n",
+    "                    mCurr[g] = mCurr[g] + 1\n",
+    "                ELSE\n",
+    "                    APPEND student to grps[g]\n",
+    "                    fCurr[g] = fCurr[g] + 1\n",
+    "                ENDIF\n",
+    "            ENDIF\n",
+    "        ENDWHILE\n",
+    "        i = i + 1\n",
+    "    ENDWHILE\n",
+    "    APPEND grps to finalGrps\n",
+    "ENDFOR"
    ]
   },
   {
