rework to some markdown and removal of extra graph
also bugfix

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -1262,14 +1262,24 @@
    "id": "367bb4e3-c8e2-48ab-ab46-8897c6ba43ec",
    "metadata": {},
    "source": [
-    "## Basic Factors\n",
+    "## Decomposition and breakdown\n",
+    "### Basic Factors\n",
     "No majority of students of the same following factors:\n",
     "1. School\n",
     "2. Gender\n",
     "3. Current CGPA\n",
     "\n",
+    "#### Requirements\n",
+    "- Defining what is least diverse for each factor\n",
+    "- Finding least diverse overall\n",
+    "  - Finding least diverse of tutorial group\n",
+    "    - Finding least diverse of group\n",
+    "- Diversity needs to be in regards to the inherent diversity of the tutorial group in order to evaluate the effectiveness of the algorithm\n",
+    "- Visualisation of overall diversity across the board\n",
+    "\n",
     "#### General flow:\n",
-    "- For each tutorial group, check for a single factor first, to find the group with the least diversity\n",
+    "- Find the diversity of every tutorial group to use for comparing diversity\n",
+    "- In a tutorial group, check for a single factor first, to find the group with the least diversity\n",
     "- Then compare them to find the group with the least diversity in the tutorial group\n",
     "- Repeat for all tutorial groups\n",
     "- Finally, for each factor, compare the least diverse group of every tutorial group to find least diverse overall\n",
@@ -1278,7 +1288,7 @@
     "- Diversity assessment of group should account for the diversity of the tutorial group it is in\n",
     "- Using averages could result in a good score when there are similar amounts of good groups and bad groups\n",
     "    - Hence we chose to evaluate using the worst\n",
-    "    - Histogram shows the distribution of groups for other case\n",
+    "    - Histogram shows the distribution of groups for the rest\n",
     "- Sorting does not feel necessary, as a histogram would show a form of sorting and is a lot more digestible\n",
     "\n",
     "#### Flowchart:\n",
@@ -2106,7 +2116,7 @@
    "source": [
     "tg = 67\n",
     "testytest = []\n",
-    "for grp in finalAllTgs[tg]:\n",
+    "for grp in finalAllTgs[tg-1]:\n",
     "    testytest.extend(grp)\n",
     "count = -1\n",
     "testData = sortGender(testytest, n)\n",
@@ -2144,65 +2154,6 @@
     "- CGPA\t- How evenly distributed academic performance is across groups  \n",
     "- Gender\t- How balanced the male/female ratio is  \n",
     "- School\t- How mixed the educational background composition is\\n  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23c51253",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print(school_diff_list)\n",
-    "#print(gender_diff_list)\n",
-    "#print(cgpa_score_list)\n",
-    "\n",
-    "def School_Histogram(School_Diff_Diversity):\n",
-    "    \n",
-    "    # School histogram\n",
-    "    plt.figure(figsize=(12, 10))\n",
-    "    plt.subplot(3, 1, 1)\n",
-    "    plt.hist(School_Diff_Diversity, bins=10, edgecolor='black')\n",
-    "    plt.title(\"Histogram of School Diversity Differences\")\n",
-    "    plt.xlabel(\"Difference from Ideal Diversity\")\n",
-    "    plt.ylabel(\"Frequency\")\n",
-    "        \n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "def Gender_Histogram(Gender_Diff_Diversity):\n",
-    "    \n",
-    "    # Gender histogram\n",
-    "    plt.figure(figsize=(12, 10))\n",
-    "    plt.subplot(3, 1, 2)\n",
-    "    plt.hist(Gender_Diff_Diversity, bins=10, edgecolor='black')\n",
-    "    plt.title(\"Histogram of Gender Diversity Differences\")\n",
-    "    plt.xlabel(\"Difference from Ideal Diversity\")\n",
-    "    plt.ylabel(\"Frequency\")\n",
-    "        \n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "def CGPA_Histogram(CGPA_Diversity):\n",
-    "    # CGPA histogram\n",
-    "    plt.figure(figsize=(12, 10))\n",
-    "    plt.subplot(3, 1, 3)\n",
-    "    plt.hist(CGPA_Diversity, bins=10, edgecolor='black')\n",
-    "    plt.title(\"Histogram of CGPA Diversity Scores\")\n",
-    "    plt.xlabel(\"Score\")\n",
-    "    plt.ylabel(\"Frequency\")\n",
-    "    \n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "# Call School Histogram\n",
-    "School_Histogram(school_diff_list)\n",
-    "\n",
-    "# Call Gender Histogram\n",
-    "Gender_Histogram(gender_diff_list)\n",
-    "\n",
-    "# Call CGPA Histogram\n",
-    "CGPA_Histogram(cgpa_score_list)"
    ]
   },
   {
