Move records.csv to assets folder

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -187,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = open(\"records.csv\", \"r\")\n",
+    "file = open(\"assets/records.csv\", \"r\")\n",
     "rawFileData = file.readlines()\n",
     "fileData = []\n",
     "for i in rawFileData:\n",
