Rename y axis of final few graphs

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2169,21 +2169,21 @@
     "    plt.hist(school_diff_list, bins=10, edgecolor='black', color='#55efc4', alpha=0.8)\n",
     "    plt.title(\"School Diversity Differences\")\n",
     "    plt.xlabel(\"Difference from Ideal Diversity\")\n",
-    "    plt.ylabel(\"Frequency\")\n",
+    "    plt.ylabel(\"Number of Tutorial Groups\")\n",
     "\n",
     "    # 2️⃣ Gender\n",
     "    plt.subplot(3, 1, 2)\n",
     "    plt.hist(gender_diff_list, bins=10, edgecolor='black', color='#ffeaa7', alpha=0.8)\n",
     "    plt.title(\"Gender Diversity Differences\")\n",
     "    plt.xlabel(\"Difference from Ideal Diversity\")\n",
-    "    plt.ylabel(\"Frequency\")\n",
+    "    plt.ylabel(\"Number of Tutorial Groups\")\n",
     "\n",
     "    # 3️⃣ CGPA\n",
     "    plt.subplot(3, 1, 3)\n",
     "    plt.hist(cgpa_score_list, bins=10, edgecolor='black', color='#74b9ff', alpha=0.8)\n",
     "    plt.title(\"CGPA Diversity Scores\")\n",
     "    plt.xlabel(\"Score\")\n",
-    "    plt.ylabel(\"Frequency\")\n",
+    "    plt.ylabel(\"Number of Tutorial Groups\")\n",
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
